# ai-meme-generator

./: .gitignore  CLAUDE.md  PRODUCTION_SECURITY.md  README.md  database.db  models-config.json  package-lock.json  pyproject.toml  render.yaml
backend/: README.md  api.py  config.py  database.db  logging_config.py  main.py  models_registry.py  pyproject.toml  supabase_client.py  test_claude_integration.py  test_db_connection.py  test_models_authenticated.py  test_models_endpoint.py  test_models_import.py  test_startup.py  verify_api_structure.py  verify_models_structure.py
backend/auth/: handler.py  router.py
backend/database/: core.py  supabase_client.py
backend/db/: database.py
backend/entities/: caption_requests.py  caption_variants.py  chat_converstaions.py  chat_messages.py  conversations.py  image_variants.py  meme_templates  meme_templates.py  messages.py  template_embeddings.py  user.py  user_memes.py
backend/features/auth/: controller.py  models.py  schema.py  service.py  session.py
backend/features/caption_requests/: controller.py  models.py  service.py
backend/features/caption_variants/: controller.py  models.py  service.py
backend/features/chat/: agent.py  controller.py  (+1 more)
backend/meme_llm_calls/: gen_freeform_meme_text.py  gen_image_openai_API.py  gen_image_pydantic_ai-fail  gen_image_pydantic_ai-retry-rerun-fail.py  gen_image_pydantic_ai-retry.py  gen_theme_meme_text.py  gen_theme_meme_text_no_duck.py  hello_world.py  multi_agent_example.py  multi_agent_theme_meme_text.py  multi_agent_theme_meme_text_no_duck.py  open_ai_weather.py  web_search_test_open_ai.py  web_search_test_open_ai_pydantic-ai.py
backend/models/: user.py
backend/routers/: hero.py  user.py
backend/schemas/: auth.py  user.py
backend/tests/: conftest.py
backend/utils/: download_save_classic_meme_templates.py  security.py
(+116 files in other folders)
